# ruchdb

./: .gitignore  Makefile  README.md
.github/workflows/: master.yml  pr.yml  push.yml  release.yml
core/: Cargo.toml  Makefile
core/src/: main.rs
libs/: Makefile
libs/rmem/: Cargo.toml  Makefile
libs/rmem/src/: align.rs  alloc.rs  lib.rs  mem.rs
libs/rmem/tests/: align.rs  alloc.rs  mem.rs
libs/rtypes/: Cargo.toml  Makefile
libs/rtypes/benches/: list_bench.rs
libs/rtypes/benches/case/: list_case.rs  mod.rs
libs/rtypes/benches/data/: list_data.rs  mod.rs
libs/rtypes/src/: lib.rs  math.rs  rlist.rs  rstring.rs
libs/rtypes/tests/: add.rs  math.rs  rlist.rs  rstring.rs
scripts/: rust.mk
