[package]
name = "core"
version = "0.1.0"
authors = [
    "Jonir Rings <peterpuyi@live.cn>",
    "peterhp <sora_lsh@163.com>",
    "little roys <qh.luo@foxmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rtypes]
path = "../libs/rtypes"