[package]
name = "core"
version = "0.1.0"
license = "MIT"
authors = [
    "Jonir Rings <peterpuyi@live.cn>",
    "peterhp <sora_lsh@163.com>"
]
repository = "https://github.com/RuchDB/ruchdb"
description = "It's the core component of RuchDB."
edition = "2018"

[dependencies]

[dependencies.rtypes]
path = "../libs/rtypes"
