[package]
name = "rtypes"
version = "0.1.0"
license = "MIT"
authors = [
    "Jonir Rings <peterpuyi@live.cn>",
    "peterhp <sora_lsh@163.com>"
]
repository = "https://github.com/RuchDB/ruchdb"
description = "It's a Rust library implementing diverse basic data types."
edition = "2018"

[dependencies]

[dependencies.rmem]
path = "../rmem"
